fix section 6-12 adaptive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="section6-12.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -243,6 +244,7 @@
           <button>Оставить заявку</button>
         </div>
       </section>
+
       <section class="feedback">
         <div class="container">
           <h3>
@@ -504,24 +506,27 @@
       <section class="time">
         <div class="container">
           <img src="src/assets/women2.webp" alt="Women" />
-          <div class="time-item">
-            <span class="orange"> 3</span>
-            <p class="white" style="bottom: -7%">
-              три часа — <br />
-              длительность <br />
-              одного тренинга
-            </p>
-          </div>
-          <div class="time-item">
-            <span class="orange"> 8-25</span>
-            <p class="white" style="bottom: -7%">
-              в трениге могут <br />
-              участвовать от 8 до 25 <br />
-              человек
-            </p>
+          <div class="time-item__wrapper">
+            <div class="time-item">
+              <span class="orange"> 3</span>
+              <p class="white" style="bottom: -7%">
+                три часа — <br />
+                длительность <br />
+                одного тренинга
+              </p>
+            </div>
+            <div class="time-item">
+              <span class="orange"> 8-25</span>
+              <p class="white" style="bottom: -7%">
+                в трениге могут <br />
+                участвовать от 8 до 25 <br />
+                человек
+              </p>
+            </div>
           </div>
         </div>
       </section>
+
       <section class="first" id="frame9">
         <div class="container">
           <h3>
