fix desktop 6-12 setion

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             состоит <br />
             тренинг
           </h3>
-          <p class="white">Этапы проведения тренинга</p>
+          <p class="white">Программа тренингов</p>
           <div class="program__menu">
             <div class="program__menu-item">
               <p class="accordion-pre">1. Вводная лекция</p>
