--- a/index.html
+++ b/index.html
@@ -670,14 +670,7 @@
           />
         </div>
         <div class="slide2 vifnslb-container">
-          <div
-            class="vifnslb-element"
-            style="
-              animation-duration: 6s;
-              animation-direction: normal;
-              animation-delay: 0s;
-            "
-          >
+          <div class="vifnslb-element">
             <div class="vifnslb-bar">
               <span class="team-slide2"> Дикий офис</span>
               <span class="team-slide2"> Дикий офис</span>
@@ -685,6 +678,8 @@
               <span class="team-slide2"> Дикий офис</span>
               <span class="team-slide2"> Дикий офис</span>
             </div>
+          </div>
+          <div class="vifnslb-element2 vifnslb-element">
             <div class="vifnslb-bar">
               <span class="team-slide2"> Дикий офис</span>
               <span class="team-slide2"> Дикий офис</span>
