--- a/index.html
+++ b/index.html
@@ -8,6 +8,127 @@
   <link rel="stylesheet" href="section6-12.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <title>Document</title>
+  <style>
+    .numbers {
+      background: #343434;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-around;
+      box-sizing: border-box;
+      padding: 3% 200px 3%;
+      position: relative;
+      height: 100%;
+      min-height: 100vh;
+    }
+
+   
+    .mission {
+      height: 100%;
+      box-sizing: border-box;
+      padding: 3% 200px 3%;
+      position: relative;
+      padding-bottom: 200px;
+      background: #343434;
+    }
+
+    .success {
+      height: 100%;
+      min-height: 100vh;
+      box-sizing: border-box;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-around;
+      background: #343434;
+    }
+
+    .feedback {
+      height: 100%;
+      min-height: 100vh;
+      box-sizing: border-box;
+      padding: 7% 0 3%;
+      position: relative;
+      background: #343434;
+      padding-bottom: 400px;
+    }
+
+    .how {
+      height: 100%;
+      min-height: 150vh;
+      box-sizing: border-box;
+      padding: 3% 200px 3%;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-around;
+      text-align: start;
+      background: #343434;
+    }
+
+    .slideshow {
+      height: 100%;
+      box-sizing: border-box;
+      padding: 7% 0 3%;
+      position: relative;
+      background: #343434;
+      padding-bottom: 300px;
+    }
+
+   
+    .program {
+      background: #343434;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-around;
+      box-sizing: border-box;
+      padding: 3% 200px 3%;
+      position: relative;
+      height: 100%;
+      min-height: 70vh;
+      padding-bottom: 200px;
+    }
+
+   
+    .time {
+      background: #343434;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      box-sizing: border-box;
+      padding: 0 200px 3%;
+      position: relative;
+      height: 100%;
+      min-height: 70vh;
+      padding-bottom: 200px;
+    }
+
+   
+    .team {
+      background: #343434;
+      box-sizing: border-box;
+      padding: 3% 0 0;
+      position: relative;
+      padding-top: 126px;
+
+      height: 100%;
+    }
+
+   
+    .footer {
+      background: #343434;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      box-sizing: border-box;
+      padding-top: 200px;
+      position: relative;
+    }
+  </style>
 </head>
 
 <body>
@@ -38,7 +159,7 @@
           </h1>
           <h2>Драйв, эволюция, результат!
             <img src="src/assets/labrer3.png" alt="" id="free" />
-            
+
           </h2>
           <img src="src/assets/arrow.svg" class="arrow-anim1" alt="Arrow down" />
         </div>
@@ -631,7 +752,8 @@
               <p style="margin-right: 5px;">Мы в соц сетях</p>
               <br />
               <p>
-                <svg style="margin-right: 20px;" width="14" height="28" viewBox="0 0 14 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg style="margin-right: 20px;" width="14" height="28" viewBox="0 0 14 28" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M9.3239 27.5461L9.3239 15.4235H13.1413L13.7087 10.6772H9.3239V7.6539C9.3239 6.28426 9.6801 5.34652 11.5149 5.34652L13.8398 5.34652V1.11485C12.7086 0.984975 11.5716 0.922264 10.4339 0.927008C7.05972 0.927008 4.74307 3.13381 4.74307 7.18503L4.74307 10.6683H0.950562L0.950562 15.4147H4.75135L4.75135 27.5461H9.3239Z"
                     fill="#FF7E00"></path>
@@ -654,7 +776,7 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.0.2/dist/simpleParallax.min.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>ч
   <script src="app.js"></script>
 </body>
 
