--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="section6-12.css" />
+    <link rel="stylesheet" href="davidStyles.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -597,64 +598,212 @@
               style="height: max-content"
             >
               <div class="hooper-list swiper-container">
-                <ul class="hooper-track swiper-wrapper">
+                <ul
+                  class="hooper-track swiper-wrapper"
+                  style="transform: translate(0px, 0px)"
+                >
                   <li
                     class="team-slide hooper-slide is-active is-current swiper-slide"
                     style="width: 694.769px"
                   >
-                    <div>
-                      <img src="src/assets/angela.png" alt="Team Photo" />
+                    <div class="team-item-wrapper">
+                      <div>
+                        <img
+                          src="src/assets/team-slide-man.png"
+                          alt="Team Photo"
+                        />
+                      </div>
+                      <div>
+                        <p>
+                          «Дикий офис» — решение для многих бизнес-проблем.
+                          Тренинг нацелен на повышение показателей эффективности
+                          компании, является универсальным инструментом для
+                          улучшения взаимоотношений в коллективе и развития
+                          осознанности, проактивности, навыков коммуникации и
+                          работы в команде. Идея создания была спонтанной и
+                          интуитивной, однако в ходе разработки тренинга я
+                          пришел к выводу, что она — гениальна. Это как
+                          тренажерный зал, только для прокачки полезных
+                          навыков».
+                        </p>
+                      </div>
                     </div>
-                    <div>
-                      <p>
-                        Тренинг формирует командный дух, и тем самым влияет на
-                        рост и прибыль компании. Например, теперь мы все играем
-                        в крестики-нолики и пьём какао по утрам. А еще всей
-                        толпой побили быбку-вахтёршу. Потому что у неё нет
-                        командного духа и вообще.
+                    <div class="team__name">
+                      <p class="team__name-descr">
+                        <span class="orange">Дмитрий Лыков</span>, автор
+                        тренинга, бизнесмен, коуч, эксперт в области
+                        коммуникативного воздействия.
                       </p>
-                      <p class="white">Анжела Топчий, коуч</p>
                     </div>
                   </li>
                   <li
-                    aria-hidden="true"
-                    class="team-slide hooper-slide is-next swiper-slide"
+                    class="team-slide hooper-slide is-active is-current swiper-slide"
                     style="width: 694.769px"
                   >
-                    <div>
-                      <img src="src/assets/angela.png" alt="Team Photo" />
+                    <div class="team-item-wrapper">
+                      <div>
+                        <img src="src/assets/angela.png" alt="Team Photo" />
+                      </div>
+                      <div>
+                        <p>
+                          «Человек — существо биологическое, а социум и мышление
+                          делает его жизнь содержательной, значимой, полной.
+                          Самый эффективный метод обучения как команды, так и
+                          каждого ее участника, — интерактивное взаимодействие,
+                          в ходе которого на практике отрабатываются
+                          определенные навыки и развиваются способности. «Дикий
+                          Офис» — создан в уникальном формате, объединяющем
+                          игровой процесс и тренинг, что дает возможность
+                          «прокачать» и развить как личные, так и командные
+                          навыки.»
+                        </p>
+                      </div>
                     </div>
-                    <div>
-                      <p>
-                        Тренинг формирует командный дух, и тем самым влияет на
-                        рост и прибыль компании. Например, теперь мы все играем
-                        в крестики-нолики и пьём какао по утрам. А еще всей
-                        толпой побили быбку-вахтёршу. Потому что у неё нет
-                        командного духа и вообще.
+                    <div class="team__name">
+                      <p class="team__name-descr">
+                        <span class="orange">Анжела Топчий</span>, соавтор
+                        инструментов и методик тренинга, руководитель проекта,
+                        эксперт в области обучения
                       </p>
-                      <p class="white">Анжела Топчий, коуч</p>
                     </div>
                   </li>
                   <li
-                    aria-hidden="true"
-                    class="team-slide hooper-slide swiper-slide"
+                    class="team-slide hooper-slide is-active is-current swiper-slide"
                     style="width: 694.769px"
                   >
-                    <div>
-                      <img src="src/assets/angela.png" alt="Team Photo" />
+                    <div class="team-item-wrapper">
+                      <div>
+                        <img
+                          src="src/assets/team-slide-man-2.png"
+                          alt="Team Photo"
+                        />
+                      </div>
+                      <div>
+                        <p>
+                          «Когда я впервые услышал об идее создания такого
+                          продукта — подумал, что это инновационный метод для
+                          подачи бизнес-тренингов. На протяжении многих лет я
+                          сталкивался с потерей мотивации сотрудниками и их
+                          нежеланием быть проактивными в рабочих процессах.
+                          Проблемы в коммуникации приводили к «замалчиванию»
+                          идей и неспособности отстоять свое мнение. «Дикий
+                          Офис» помогает повысить качество общения между
+                          сотрудниками, благодаря чему коллектив становится
+                          сплоченным и как следствие эффективным».
+                        </p>
+                      </div>
                     </div>
-                    <div>
-                      <p>
-                        Тренинг формирует командный дух, и тем самым влияет на
-                        рост и прибыль компании. Например, теперь мы все играем
-                        в крестики-нолики и пьём какао по утрам. А еще всей
-                        толпой побили быбку-вахтёршу. Потому что у неё нет
-                        командного духа и вообще.
+                    <div class="team__name">
+                      <p class="team__name-descr">
+                        <span class="orange">Александр Погорелый</span>, соавтор
+                        тренинга как бизнес-инструмента, бизнесмен, эксперт в
+                        управлении персоналом.
                       </p>
-                      <p class="white">Анжела Топчий, коуч</p>
+                    </div>
+                  </li>
+                  <li
+                    class="team-slide hooper-slide is-active is-current swiper-slide"
+                    style="width: 694.769px"
+                  >
+                    <div class="team-item-wrapper">
+                      <div>
+                        <img
+                          src="src/assets/team-slide-man-3.png"
+                          alt="Team Photo"
+                        />
+                      </div>
+                      <div>
+                        <p>
+                          «Ценность каждого продукта — результат, который он
+                          приносит клиенту. Занимаясь оптимизацией бизнес
+                          процессов и являясь менеджером проектов, я тестировала
+                          множество инструментов для повышения эффективности
+                          компании, однако поняла, что немалую важность занимает
+                          работа в команде. Именно «Дикий офис» может принести
+                          пользу для любого вида бизнеса - это эволюция и
+                          сплоченность сотрудников, ведь именно люди являются
+                          важнейшим ресурсом для достижения успеха, развития и
+                          масштабирования».
+                        </p>
+                      </div>
+                    </div>
+                    <div class="team__name">
+                      <p class="team__name-descr">
+                        <span class="orange">Ольга Малькут</span>, соавтор
+                        тренинга как бизнес-инструмента, бизнесмен, эксперт в
+                        управлении персоналом.
+                      </p>
+                    </div>
+                  </li>
+                  <li
+                    class="team-slide hooper-slide is-active is-current swiper-slide"
+                    style="width: 694.769px"
+                  >
+                    <div class="team-item-wrapper">
+                      <div>
+                        <img
+                          src="src/assets/team-slide-man-4.png"
+                          alt="Team Photo"
+                        />
+                      </div>
+                      <div>
+                        <p>
+                          «Дикий офис» — отличное решение для комфортного и
+                          продуктивного взаимодействия участников тренинга.
+                          Игровая среда позволяет в непринужденной обстановке
+                          проявить личностный потенциал, а благодаря участию
+                          психолога могут быть выявлены скрытые способности
+                          сотрудников, полезные для компании. Руководитель же
+                          обеспечивает совместную эмоциональную разрядку
+                          коллективу. Вследствие чего повышается лояльность
+                          сотрудников к Компании, поскольку тренинг является
+                          интеллектуально-развлекательным досугом».
+                        </p>
+                      </div>
+                    </div>
+                    <div class="team__name">
+                      <p class="team__name-descr">
+                        <span class="orange">Анна Бурдейная</span>, координатор
+                        проекта, эксперт в фундаментальной и прикладной
+                        психологии.
+                      </p>
+                    </div>
+                  </li>
+                  <li
+                    class="team-slide hooper-slide is-active is-current swiper-slide"
+                    style="width: 694.769px"
+                  >
+                    <div class="team-item-wrapper">
+                      <div>
+                        <img
+                          src="src/assets/team-slide-man-5.png"
+                          alt="Team Photo"
+                        />
+                      </div>
+                      <div>
+                        <p>
+                          «Изучая корпоративную психологию, я пришла к выводу,
+                          что взаимоотношения в коллективе — это фундамент
+                          социально-психологического климата в компании.
+                          Энергобаланс персонала комплексно влияет на общую
+                          производительность и эффективность бизнеса. Необходимо
+                          наладить коммуникацию и синергию между сотрудниками,
+                          повысить сплоченность команды, скорректировать
+                          дисбаланс в коллективе. Ведь именно персонал
+                          определяет факторы негативного влияния на
+                          психологический климат, а своевременное их выявление и
+                          устранение в разы улучшает командное взаимодействие».
+                        </p>
+                      </div>
+                    </div>
+                    <div class="team__name">
+                      <p class="team__name-descr">
+                        <span class="orange">Оксана Атшибаева</span>, психолог
+                      </p>
                     </div>
                   </li>
                 </ul>
+
                 <div
                   aria-live="polite"
                   aria-atomic="true"
