--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
       align-items: flex-start;
       justify-content: space-around;
       box-sizing: border-box;
-      padding: 3% 200px 3%;
       position: relative;
-      height: 100%;
       min-height: 100vh;
+      padding-bottom: 165px;
     }
 
 
