--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
             презентацию
           </p>
           <p class="small">
-            Просто оставьте номер телефона — мы свяжемся с вами сегодня же и
-            расскажем подробности.
+            Просто оставьте номер телефона — мы свяжемся <br />
+            с вами сегодня же и расскажем подробности.
           </p>
           <button>Оставить заявку</button>
         </div>
