--- a/index.html
+++ b/index.html
@@ -821,7 +821,11 @@
           <input type="text" id="mail" />
           <label for="phone"> Телефон</label>
           <input placeholder="+380" type="text" id="phone" />
-
+          <label class="castom-check">
+            <input class="castom-check__check" type="checkbox" name="" id="">
+            <div class="castom-check__castom-check"></div>
+            <div class="castom-check__text">Даю согласие на обработку и хранение персональных данных</div>
+          </label>
           <button>Оставить заявку</button>
         </form>
         <div class="footer__contacts">
