--- a/index-ua.html
+++ b/index-ua.html
@@ -166,7 +166,10 @@
               style="margin-left: -20px"
             />
             <div style="display: flex; align-items: center">
-              <div class="langs"><a class="lang-active" href="index.html">Ru</a><a href="index-ua.html">Ua</a></div>
+              <div class="langs">
+                <a href="index.html">Ru</a
+                ><a class="lang-active" href="index-ua.html">Ua</a>
+              </div>
               <button>Оставить заявку</button>
             </div>
           </div>
