--- a/index-ua.html
+++ b/index-ua.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
-    <title>Document</title>
+    <title>Дикий Офіс</title>
     <style>
       .numbers {
         background: #343434;
