вроде все сделано

--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
               style="margin-left: -20px"
             />
             <div style="display: flex; align-items: center">
-              <div class="langs"><a class="lang-active" href="index.html">Ru</a><a href="index-ua.html">Ua</a></div>
+              <div class="langs">
+                <a class="lang-active" href="index.html">Ru</a
+                ><a href="index-ua.html">Ua</a>
+              </div>
               <button>Оставить заявку</button>
             </div>
           </div>
@@ -580,8 +583,8 @@
             участников обсуждать идеи, доказывать свою точку зрения и
             придерживаться общей позиции команды.
             <br /><br />
-            Цель каждого участника — привести команду к победе в борьбе за
-            выживание.
+            Цель каждого участника — привести команду <br />
+            к победе в борьбе за выживание.
           </p>
           <div class="color-bg"></div>
           <div class="video-bg">
