--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
             <label class="label__name" for="name"> Имя</label>
             <input type="text" id="name" />
             <span class="name__error error">Введите имя</span>
-            <label class="label__mail" for="mail"> E-mail</label>
+            <label class="label__mail" for="mail"> E-mail*</label>
             <input type="text" id="mail" />
             <span class="mail__error error">Введите почту</span>
             <label class="label__phone" for="phone"> Телефон</label>
